@@ -1,3 +1,9 @@
+2006-05-11  Dave Brolley  <brolley@redhat.com>
+
+	* elfload.c (readElfFile): symTabEntry is now 24 bytes in length.
+	Add 64 bit support for SHT_STRTAB and SHT_SYMTAB. Add 64 bit support
+	for reading the symbol table.
+
 2005-12-16  Nathan Sidwell  <nathan@codesourcery.com>
 
 	Second part of ms1 to mt renaming.
